legacy since Isabelle2009-2.  INCOMPATIBILITY, use 'axiomatization'
instead, while observing its uniform scope for polymorphism.

* Discontinued empty name bindings in 'axiomatization'.
INCOMPATIBILITY.

* SELECT_GOAL now retains the syntactic context of the overall goal
state (schematic variables etc.).  Potential INCOMPATIBILITY in rare
situations.


*** HOL ***

* Code generator:
  * 'code_printing' unifies 'code_const' / 'code_type' / 'code_class' / 'code_instance'.
  * 'code_identifier' declares name hints for arbitrary identifiers in generated code,
    subsuming 'code_modulename'.
  See the Isar reference manual for syntax diagrams, and the HOL theories for examples.

* Library/Polynomial.thy:
  * Use lifting for primitive definitions.
  * Explicit conversions from and to lists of coefficients, used for generated code.
  * Replaced recursion operator poly_rec by fold_coeffs.
  * Prefer pre-existing gcd operation for gcd.
  * Fact renames:
    poly_eq_iff ~> poly_eq_poly_eq_iff
    poly_ext ~> poly_eqI
    expand_poly_eq ~> poly_eq_iff
IMCOMPATIBILTIY.

* Reification and reflection:
  * Reification is now directly available in HOL-Main in structure "Reification".
  * Reflection now handles multiple lists with variables also.
  * The whole reflection stack has been decomposed into conversions.
INCOMPATIBILITY.

* Weaker precendence of syntax for big intersection and union on sets,
in accordance with corresponding lattice operations.  INCOMPATIBILITY.

* Nested case expressions are now translated in a separate check
  phase rather than during parsing. The data for case combinators
  is separated from the datatype package. The declaration attribute
  "case_translation" can be used to register new case combinators:

  declare [[case_translation case_combinator constructor1 ... constructorN]]

* Notation "{p:A. P}" now allows tuple patterns as well.

* Revised devices for recursive definitions over finite sets: